Add a link to edit the current page on github

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -25,6 +25,9 @@
     </ul>
   </div>
   <div id="copyright" class="span-12 last">
-    Copyright © 2009-2017 RubyInstaller <a href="/about/contributors">Contributors</a>
+    <ul>
+      <li><a href="https://github.com/oneclick/rubyinstaller.org-website/edit/master/{{ page.path }}" class="edit">Improve this page</a></li>
+      <li>Copyright © 2009-2017 RubyInstaller <a href="/about/contributors">Contributors</a></li>
+    </ul>
   </div>
 </div>
