Swap download left<->right page files
... so that the edit button links to the description part.

--- a/_includes/download_list.html
+++ b/_includes/download_list.html
@@ -1,4 +1,4 @@
 {% capture my_include %}
-{% include download_hints.markdown %}
+{% include download_list.markdown %}
 {% endcapture %}
 {{ my_include | markdownify }}
