--- a/_layouts/downloads.html
+++ b/_layouts/downloads.html
@@ -4,12 +4,12 @@ title: "Downloads"
 ---
 <div class="span-11">
   <div id="download-links">
-    {{ content }}
+    {% include download_list.html %}
   </div>
 </div>
 
 <div class="span-13 last">
   <div id="right_content_sub">
-    {% include download_hints.html %}
+    {{ content }}
   </div>
 </div>
