--- a/_includes/header.html
+++ b/_includes/header.html
@@ -6,11 +6,9 @@
     <ul id="navbar">
       <li {% if page.url contains "/about" %}id="active"{% endif %}><a href="{{ "/about" | relative_url }}">About</a></li>
       <li {% if page.url contains "/downloads" %}id="active"{% endif %}><a href="{{ "/downloads" | relative_url }}">Download</a></li>
-    <!--
-      <li><a href="http://wiki.github.com/oneclick/rubyinstaller">Knowledge Base</a></li>
-    -->
       <li><a href="http://github.com/oneclick/rubyinstaller2/wiki/">Help</a></li>
-      <li><a href="http://github.com/oneclick/rubyinstaller/wiki/How-to-Contribute/">Contribute</a></li>
     </ul>
   </div>
+  <!-- GitHub Ribbon taken from: https://github.com/blog/273-github-ribbons -->
+  <a href="https://github.com/oneclick/rubyinstaller2"><img style="position: absolute; top: 0; right: 0; border: 0;" src="https://camo.githubusercontent.com/365986a132ccd6a44c23a9169022c0b5c890c387/68747470733a2f2f73332e616d617a6f6e6177732e636f6d2f6769746875622f726962626f6e732f666f726b6d655f72696768745f7265645f6161303030302e706e67" alt="Fork me on GitHub" data-canonical-src="https://s3.amazonaws.com/github/ribbons/forkme_right_red_aa0000.png"></a>
 </div>
