--- a/_includes/head.html
+++ b/_includes/head.html
@@ -11,6 +11,7 @@
   <link rel="stylesheet" href="{{ "/styles/site.css" | relative_url }}" type="text/css" media="screen, projection, print">
   <script type="text/javascript" src="{{ "/assets/jquery.min.js" | relative_url }}"></script>
   <!--script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.4/jquery.min.js"></script-->
+  <script type="text/javascript" src="{{ "/assets/application.js" | relative_url }}"></script>
 
   <link rel="canonical" href="{{ page.url | replace:'index.html','' | absolute_url }}">
   <link rel="alternate" type="application/rss+xml" title="{{ site.title | escape }}" href="{{ "/feed.xml" | relative_url }}">
