--- a/styles/site.css
+++ b/styles/site.css
@@ -417,6 +417,48 @@ li.rubyinstaller7z, li.rubychm7z { list-style-image:url("../assets/sevenz_16x16.
 li.chksum { list-style-image:url("../assets/chksum_16x16.png"); list-style-position:inside; }
 li.devkitsfx { list-style-image:url("../assets/sfx_24x19.png"); list-style-position:inside; }
 
+a.downloadinfo {
+  padding-left: 10px;
+}
+ul.downloadinfo {
+  list-style-image:none;
+  display: none;
+  margin-bottom: 12px;
+}
+
+
+.buttonbox {
+  box-sizing: border-box;
+  border-radius: 3px;
+  vertical-align: middle;
+}
+button.js-copybtn {
+  background:url("../assets/copy_clipboard.svg");
+  background-color: #eff3f6;
+  background-image: linear-gradient(-180deg, #fafbfc 0%, #eff3f6 90%);
+  background-repeat: repeat-x;
+  background-position: -1px -1px;
+  background-size: 110% 110%;
+  border-top-left-radius: 0;
+  border-bottom-left-radius: 0;
+  padding: 3px 10px;
+  display: inline-block;
+  cursor: pointer;
+  border: 1px solid rgba(27,31,35,0.2);
+}
+input.js-copytextinput {
+  box-shadow: inset 0 1px 2px rgba(27,31,35,0.075);
+  padding: 6px 8px;
+  padding-top: 3px;
+  padding-bottom: 3px;
+  line-height: 20px;
+  display: table-cell;
+  border-top-right-radius: 0;
+  border-bottom-right-radius: 0;
+  min-height: 28px;
+  border: 1px solid #d1d5da;
+}
+
 @font-face {
     font-family: "Vegur";
     src: url("fonts/Vegur-Regular.woff") format('woff');
