Highlight the recommended ruby version
Still many developers stumble upon binary gems which don't yet support
ruby-2.5.

--- a/_includes/downloadlinks.html
+++ b/_includes/downloadlinks.html
@@ -1,6 +1,6 @@
 {% for dl in include.dls %}
   <li class="{{ dl.filetype }}">
-    <a class="downloadlink" href="{{ dl.href }}">{{ dl.name }}</a>
+    <a class="downloadlink {% if dl.recommended %}download-recommended{% endif %}" href="{{ dl.href }}">{{ dl.name }}</a>
     {% if dl.gpgsign or dl.sha256 %}
       <a class="downloadinfo" title="Show / hide details"></a>
       <ul class="downloadinfo">
