--- a/styles/site.css
+++ b/styles/site.css
@@ -412,7 +412,7 @@ a#archive { float:right; }
 a#archive:hover { text-decoration:none; }
 a#archive:after { content:"\BB"; }
 
-li.rubyinstallerexe { list-style-image:url("../assets/exe_16x16.png"); list-style-position:inside; }
+li.ridkexe, li.rubyinstallerexe { list-style-image:url("../assets/exe_16x16.png"); list-style-position:inside; }
 li.rubyinstaller7z, li.rubychm7z { list-style-image:url("../assets/sevenz_16x16.png"); list-style-position:inside; }
 li.chksum { list-style-image:url("../assets/chksum_16x16.png"); list-style-position:inside; }
 li.devkitsfx { list-style-image:url("../assets/sfx_24x19.png"); list-style-position:inside; }
