Translated main page

--- a/_includes/banner.html
+++ b/_includes/banner.html
@@ -1,21 +1,21 @@
 <div id="graphic" class="container clear">
   <div class="span-15">
-    <h1>The easy way to install Ruby on Windows</h1>
+    <h1>Простой способ установить Ruby на Windows</h1>
 
     <p>
-      This is a <strong>self-contained Windows-based installer</strong> that includes the <strong>Ruby language</strong>,
-      an execution environment, important <strong>documentation</strong>, and more.
+      Это <strong>автономный установщик, который работает в среде Windows</strong> и включает в себя <strong>язык Ruby</strong>,
+      среду выполнения, важную <strong>документацию</strong> и многое другое.
     </p>
 
     <div>
       <div id="download_btn">
         <a href="{{ "/downloads/" | relative_url }}">
-          <span>Download</span>
+          <span>Загрузить</span>
         </a>
       </div>
       <div id="addon_btn">
         <a href="{{ "/add-ons/uru" | relative_url }}">
-          <span>Add-ons</span>
+          <span>Дополнения</span>
         </a>
       </div>
     </div>
