--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -2,32 +2,33 @@
   <div class="span-4">
     <ul>
       <li><strong>RubyInstaller</strong></li>
-      <li><a href="/about/">About</a></li>
-      <li><a href="/news/">News</a></li>
-      <li><a href="/downloads/">Download</a></li>
+      <li><a href="/about/">О проекте</a></li>
+      <li><a href="/news/">Новости</a></li>
+      <li><a href="/downloads/">Загрузить</a></li>
     </ul>
   </div>
   <div class="span-4">
     <ul>
-      <li><strong>Developers</strong></li>
-      <li><a href="https://groups.google.com/group/rubyinstaller">Developer List</a></li>
-      <li><a href="https://github.com/oneclick/rubyinstaller/wiki">Development Doc</a></li>
-      <li><a href="https://github.com/luislavena/rake-compiler">Gem developers</a></li>
+      <li><strong>Разработчикам</strong></li>
+      <li><a href="https://groups.google.com/group/rubyinstaller">Сообщество</a></li>
+      <li><a href="https://github.com/oneclick/rubyinstaller/wiki">Документация</a></li>
+      <li><a href="https://github.com/luislavena/rake-compiler">Разработчикам гемов</a></li>
     </ul>
   </div>
   <div class="span-4">
     <ul>
-      <li><strong>Help</strong></li>
+      <li><strong>Помощь</strong></li>
       <li><a href="https://github.com/oneclick/rubyinstaller/wiki/faq">FAQ</a></li>
-      <li><a href="https://groups.google.com/group/rubyinstaller">Mailing list</a></li>
-      <li><a href="https://github.com/oneclick/rubyinstaller/issues">Report a bug</a></li>
-      <li><a href="https://github.com/oneclick/rubyinstaller/issues">Request a feature</a></li>
+      <li><a href="https://groups.google.com/group/rubyinstaller">Рассылка</a></li>
+      <li><a href="https://github.com/oneclick/rubyinstaller/issues">Сообщить об ошибке</a></li>
+      <li><a href="https://github.com/oneclick/rubyinstaller/issues">Предложить улучшения</a></li>
     </ul>
   </div>
   <div id="copyright" class="span-12 last">
     <ul>
-      <li><a href="https://github.com/oneclick/rubyinstaller.org-website/edit/master/{{ page.path }}" class="edit">Improve this page</a></li>
-      <li>Copyright © 2009-2019 RubyInstaller <a href="/about/contributors">Contributors</a></li>
+      <li><a href="https://github.com/oneclick/rubyinstaller.org-website/edit/master/{{ page.path }}" class="edit">Улучшить эту страницу</a></li>
+      <li>Copyright © Перевод сайта <a href="rubyinstaller.org">RubyInstaller</a></li>
+      <li><a href="/about/contributors"> Contributors</a></li>
     </ul>
   </div>
 </div>
