--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -29,7 +29,7 @@ title: "News"
         {% include disqus_comments.html %}
       {% endif %}
       <footer class="post-footer">
-        <p class="posted">{% if page.author %} Posted by <span itemprop="author" itemscope itemtype="http://schema.org/Person"><span itemprop="name">{{ page.author }}</span></span> on {% endif %}<time datetime="{{ page.date | date_to_xmlschema }}" itemprop="datePublished">{{ page.date | date: "%b %-d, %Y" }}</time></p>
+        <p class="posted">{% if page.author %} Опубликовано <span itemprop="author" itemscope itemtype="http://schema.org/Person"><span itemprop="name">{{ page.author }}</span></span> {% endif %}<time datetime="{{ page.date | date_to_xmlschema }}" itemprop="datePublished">{{ page.date | date: "%b %-d, %Y" }}</time></p>
       </footer>
     </article>
   </div>
