Translated main page, posts, about

--- a/_includes/banner.html
+++ b/_includes/banner.html
@@ -1,12 +1,10 @@
 <div id="graphic" class="container clear">
   <div class="span-15">
-    <h1>Простой способ установить Ruby на Windows</h1>
+    <h1>Установщик Ruby для Windows</h1>
 
     <p>
-      Это <strong>автономный установщик, который работает в среде Windows</strong> и включает в себя <strong>язык Ruby</strong>,
+      <strong>...который работает на Windows</strong> и включает в себя <strong>язык Ruby</strong>,
       среду выполнения, важную <strong>документацию</strong> и многое другое.
-    </p>
-
     <div>
       <div id="download_btn">
         <a href="{{ "/downloads/" | relative_url }}">
