--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -28,7 +28,7 @@
     <ul>
       <li><a href="https://github.com/oneclick/rubyinstaller.org-website/edit/master/{{ page.path }}" class="edit">Улучшить эту страницу</a></li>
       <li>Copyright © Перевод сайта <a href="rubyinstaller.org">RubyInstaller</a></li>
-      <li><a href="/about/contributors"> Contributors</a></li>
+      <li><a href="/about/contributors">Уже внесли вклад</a></li>
     </ul>
   </div>
 </div>
