--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -3,7 +3,7 @@
     <ul>
       <li><strong>RubyInstaller</strong></li>
       <li><a href="/about/">About</a></li>
-      <li><a href="/news/">News</a></li>
+      <li><a href="/feed.xml">News feed</a></li>
       <li><a href="/downloads/">Download</a></li>
     </ul>
   </div>
