--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -3,7 +3,7 @@
     <ul>
       <li><strong>RubyInstaller</strong></li>
       <li><a href="/about/">About</a></li>
-      <li><a href="/feed.xml">News feed</a></li>
+      <li><a href="/feed.xml">News Feed</a></li>
       <li><a href="/downloads/">Download</a></li>
     </ul>
   </div>
@@ -12,16 +12,16 @@
       <li><strong>Developers</strong></li>
       <li><a href="https://groups.google.com/group/rubyinstaller">Developer List</a></li>
       <li><a href="https://github.com/oneclick/rubyinstaller/wiki">Development Doc</a></li>
-      <li><a href="https://github.com/luislavena/rake-compiler">Gem developers</a></li>
+      <li><a href="https://github.com/luislavena/rake-compiler">Gem Developers</a></li>
     </ul>
   </div>
   <div class="span-4">
     <ul>
       <li><strong>Help</strong></li>
       <li><a href="https://github.com/oneclick/rubyinstaller/wiki/faq">FAQ</a></li>
-      <li><a href="https://groups.google.com/group/rubyinstaller">Mailing list</a></li>
-      <li><a href="https://github.com/oneclick/rubyinstaller/issues">Report a bug</a></li>
-      <li><a href="https://github.com/oneclick/rubyinstaller/issues">Request a feature</a></li>
+      <li><a href="https://groups.google.com/group/rubyinstaller">Mailing List</a></li>
+      <li><a href="https://github.com/oneclick/rubyinstaller/issues">Report a Bug</a></li>
+      <li><a href="https://github.com/oneclick/rubyinstaller/issues">Request a Feature</a></li>
     </ul>
   </div>
   <div id="copyright" class="span-12 last">
