Rename GPG -> PGP
because PGP is the standard the file is based on.

--- a/_includes/downloadlinks.html
+++ b/_includes/downloadlinks.html
@@ -5,7 +5,7 @@
       <a class="downloadinfo" title="Show / hide details"></a>
       <ul class="downloadinfo">
         {% if dl.gpgsign %}
-          <li>download <a href="{{ dl.gpgsign }}">GPG signature</a></li>
+          <li>download <a href="{{ dl.gpgsign }}">PGP signature</a></li>
         {% endif %}
         {% if dl.sha256 %}
           <li>
