Upgrade to the latest jQuery v3.7.0 using CDN

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -9,8 +9,7 @@
   <link rel="stylesheet" href="{{ "/styles/blueprint/screen.css" | relative_url }}" type="text/css" media="screen, projection">
   <link rel="stylesheet" href="{{ "/styles/blueprint/print.css" | relative_url }}" type="text/css" media="print">
   <link rel="stylesheet" href="{{ "/styles/site.css" | relative_url }}" type="text/css" media="screen, projection, print">
-  <script type="text/javascript" src="{{ "/assets/jquery.min.js" | relative_url }}"></script>
-  <!--script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.4/jquery.min.js"></script-->
+  <script src="https://cdn.jsdelivr.net/npm/jquery@3.7.0/dist/jquery.min.js"></script>
   <script type="text/javascript" src="{{ "/assets/application.js" | relative_url }}"></script>
 
   <link rel="canonical" href="{{ page.url | replace:'index.html','' | absolute_url }}">
